# alejandro-areiza_betsson

./: .flake8  .gitignore  README.md  TODO.md  noxfile.py  pyproject.toml
business/screens/: __init__.py  cart_screen.py  checkout_overview_screen.py  checkout_screen.py  login_screen.py  products_screen.py  swap_labs.py
config/config_files/: desired_capabilities.json
config/drivers/: __init__.py  mobile_driver.py  mobile_driver_factory.py
config/drivers/android_driver/: __init__.py  android_mobile_driver.py
config/drivers/ios_driver/: __init__.py  ios_mobile_driver.py
config/dto/: __init__.py  desired_capabilities_dto.py
config/utils/: __init__.py  data_provider.py  logger.py
docs/: exploratory_testing.md  setup-guide.md  test_cases.md
tests/features/: __init__.py  checkout.feature  environment.py  smoke.feature  user_authentication.feature
tests/features/steps/: __init__.py  checkout_steps.py  login_steps.py  products_steps.py
