[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swag-labs-test-automation"
version = "1.0.0"
description = "Cross-platform test automation framework for Swag Labs Android app"
authors = [{name = "Alejandro Areiza", email = "ing.alejandroareiza@example.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "appium-python-client>=5.2.4",
    "behave>=1.2.6",
    "selenium>=4.27.0",
    "python-dotenv>=1.0.1",
    "jsonschema>=4.23.0",
    "allure-behave>=2.13.5",
    "pytest>=7.4.2",
    "pytest-html>=4.1.0",
    "pytest-sugar>=1.0.0",
    "assertpy>=1.1",
    "structlog>=23.2.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
include = ["config*", "drivers*", "pages*", "utils*", "features*"]
exclude = ["app*", "reports*", ".venv*"]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "isort>=5.13.0",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=24.10.31",
    "nox>=2024.4.15",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | reports
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [".venv/*", "venv/*", "build/*", "dist/*", "reports/*"]
known_first_party = ["business", "config", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = ["LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
strict_equality = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "appium.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "behave.*"
ignore_missing_imports = true

[tool.behave]
default_format = "pretty"
default_tags = ["-wip"]
show_skipped = false
show_timings = true
stdout_capture = false
stderr_capture = false
log_capture = false
logging_level = "INFO"

[tool.behave.userdata]
browser = "android"
platform = "android"

[tool.pytest.ini_options]
minversion = "7.4.2"
testpaths = ["tests"]
addopts = [
  "--tb=short",
  "--capture=no",
  "--html=reports/report.html",
  "--self-contained-html",
  "-v"
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "smoke: Quick smoke tests",
    "regression: Full regression tests",
    "search: Search functionality tests",
]

